tests/invalid/generated_binop_mul_bytearray_bytes/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytearray = bytearray(b"hello")
    y: bytes = b"hello"
    z = x * y
